--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -77,6 +77,7 @@
     gap: {{ section.settings.row_gap }}px {{ section.settings.column_gap }}px;
     padding: 0;
     margin: 0;
+    justify-content: center;
 }
 
 #shopify-section-{{ section.id }} .team-card-wrapper {
