--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -77,7 +77,7 @@
     gap: {{ section.settings.row_gap }}px {{ section.settings.column_gap }}px;
     padding: 0;
     margin: 0;
-    justify-content: center;
+    justify-content: center !important;
 }
 
 #shopify-section-{{ section.id }} .team-card-wrapper {
