Trying to adjust cards in center

--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -109,8 +109,8 @@
 
 <div class="page-width meet-team-section-padding" style="max-width: {{ section.settings.max_width }}px;">
     <h2 class="section-heading">{{ section.settings.heading }}</h2>
-
-    <div class="team-cards-row">
+      I want team cards to be here
+    <div class="team-cards-row" style="display:flex !important; justify-content:center !importnat;">
         {% for block in section.blocks %}
         <div class="team-card-wrapper" {{ block.shopify_attributes }}>
             <div class="flip-card">
