--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -45,12 +45,12 @@
 
 <div class="container py-5">
     <h2 class="text-center mb-5">{{ section.settings.heading }}</h2>
-
+      sdjghfhsdkjhfk
     <div class="row g-4">
 
         {% for block in section.blocks %}
         <div class="col-md-4" {{ block.shopify_attributes }}>
-            <div class="flip-card">
+            <div class="flip-card" style="border-radius:2px !important;">
                 <div class="flip-card-inner">
 
                     <!-- Front -->
