Trying to adjust cards in center

--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -58,7 +58,7 @@
                         {% if block.settings.image != blank %}
                             <img src="{{ block.settings.image | image_url: width: 600 }}" alt="{{ block.settings.name }}">
                         {% else %}
-                            <img src="https://via.placeholder.com/400x250" alt="placeholder" style="border-radius:2px;width:300px;height:300px;">
+                            <img src="https://via.placeholder.com/400x250" alt="placeholder" style="border-radius:2px !important;width:300px !important;height:300px; !important">
                         {% endif %}
 
                         <h5 class="mt-3 mb-0">{{ block.settings.name }}</h5>
