--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -43,7 +43,7 @@
 }
 {% endstylesheet %}
 
-<div class="container py-5">
+<div class="container py-5" style="height:100vh;">
     <h2 class="text-center mb-5">{{ section.settings.heading }}</h2>
       
     <div class="row g-4">
