--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -56,7 +56,7 @@
                     <!-- Front -->
                     <div class="flip-card-front text-center">
                         {% if block.settings.image != blank %}
-                            <img src="{{ block.settings.image | image_url: width: 600 }}" alt="{{ block.settings.name }}">
+                            <img src="{{ block.settings.image | image_url: width: 600 }}" alt="{{ block.settings.name }}" style="width:300px;height:300px;border-radius:2px;">
                         {% else %}
                             <img src="https://via.placeholder.com/400x250" alt="placeholder" style="width:300px;height:300px;border-radius:2px;">
                         {% endif %}
