trying to fix team cards

--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -54,7 +54,7 @@
                 <div class="flip-card-inner">
 
                     <!-- Front -->
-                    <div class="flip-card-front text-center">
+                    <div class="flip-card-front text-center" style="height:500px;">
                         {% if block.settings.image != blank %}
                             <img src="{{ block.settings.image | image_url: width: 600 }}" alt="{{ block.settings.name }}" style="width:400px;height:400px;border-radius:2px;">
                         {% else %}
