--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -54,11 +54,11 @@
                 <div class="flip-card-inner">
 
                     <!-- Front -->
-                    <div class="flip-card-front text-center" style="height:500px;">
+                    <div class="flip-card-front text-center">
                         {% if block.settings.image != blank %}
-                            <img src="{{ block.settings.image | image_url: width: 600 }}" alt="{{ block.settings.name }}" style="width:400px;height:400px;border-radius:2px;">
+                            <img src="{{ block.settings.image | image_url: width: 600 }}" alt="{{ block.settings.name }}">
                         {% else %}
-                            <img src="https://via.placeholder.com/400x250" alt="placeholder" style="width:400px;height:400px;border-radius:2px;">
+                            <img src="https://via.placeholder.com/400x250" alt="placeholder">
                         {% endif %}
 
                         <h5 class="mt-3 mb-0">{{ block.settings.name }}</h5>
