--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -43,13 +43,13 @@
 }
 {% endstylesheet %}
 
-<div class="container py-5" style="height:100vh;border:1px solid red;">
+<div class="container py-5" style="height:100vh;">
     <h2 class="text-center mb-5">{{ section.settings.heading }}</h2>
       
     <div class="row g-4">
 
         {% for block in section.blocks %}
-        <div class="col-md-4" {{ block.shopify_attributes }}>
+        <div class="col-md-4" {{ block.shopify_attributes }} style="border:2px solid red;">
             <div class="flip-card">
                 <div class="flip-card-inner">
 
