--- a/sections/meet-team.liquid
+++ b/sections/meet-team.liquid
@@ -49,7 +49,7 @@
     <div class="row g-4">
 
         {% for block in section.blocks %}
-        <div class="col-md-4" {{ block.shopify_attributes }} style="border:2px solid red; margin:2px;">
+        <div class="col-md-4" {{ block.shopify_attributes }}>
             <div class="flip-card">
                 <div class="flip-card-inner">
 
